RESOLVED FIXED76674
[Qt] [WK2] Division by zero error in QtViewportInteractionEngine::setItemRectVisible
https://bugs.webkit.org/show_bug.cgi?id=76674
Summary [Qt] [WK2] Division by zero error in QtViewportInteractionEngine::setItemRect...
Viatcheslav Ostapenko
Reported 2012-01-19 16:57:32 PST
When running WK2 API test sometimes getting division by zero in QtViewportInteractionEngine::setItemRectVisible on this line: qreal itemScale = m_viewport->width() / itemRect.width(); This happens when webview not yet resized to the window size.
Attachments
Patch (1.30 KB, patch)
2012-01-19 17:02 PST, Viatcheslav Ostapenko
no flags
Add reviewed by. (1.32 KB, patch)
2012-01-20 16:02 PST, Viatcheslav Ostapenko
no flags
Viatcheslav Ostapenko
Comment 1 2012-01-19 17:02:46 PST
Viatcheslav Ostapenko
Comment 2 2012-01-20 16:02:32 PST
Created attachment 123399 [details] Add reviewed by.
WebKit Review Bot
Comment 3 2012-01-20 19:04:14 PST
Comment on attachment 123399 [details] Add reviewed by. Clearing flags on attachment: 123399 Committed r105565: <http://trac.webkit.org/changeset/105565>
WebKit Review Bot
Comment 4 2012-01-20 19:04:19 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.