[Qt] [WK2] Division by zero error in QtViewportInteractionEngine::setItemRectVisible https://bugs.webkit.org/show_bug.cgi?id=76674

Reviewed by Kenneth Rohde Christiansen.

Make sure that itemRect is not empty.

* UIProcess/qt/QtViewportInteractionEngine.cpp:
(WebKit::QtViewportInteractionEngine::setItemRectVisible):


Canonical link: https://commits.webkit.org/93601@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105565 268f45cc-cd09-0410-ab3c-d52691b4dbfc